...
                            onValueChange = { viewModel.updateSearchQuery(it) },
                            modifier =
                                Modifier
                                    .fillMaxWidth()
                                    .animateContentSize(),
                            singleLine = true,
                            placeholder = { Text(text = "Search") },
                        )
                    } else {
                        Text(text = "Coins", modifier = Modifier.animateContentSize())
                    }
                },
                actions = {
...
